# canon-generator

./: CMakeLists.txt  CanonGenerator.sln  CanonGenerator.vcxproj  CanonGenerator.vcxproj.filters  EXAMPLE.cpp  Notes.txt  canon.cpp  canon.h  canon_generator.cpp  canon_generator.vcxproj  counterpoint_checker.cpp  counterpoint_checker.h  example.musicxml  exception.cpp  exception.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  input.musicxml  midi.mid  multimeasure.musicxml  noutput.musicxml  output.musicxml  output.mxl  rhythmic hierarchy test.musicxml  settings.h  sonority.cpp  sonority.h  transposed_multimeasure.mscz  transposed_multimeasure.musicxml  transposed_multimeasure.mxl  what it should look like.musicxml
